--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,62 @@
+spring.messages.fallback-to-system-locale=false
+spring.messages.encoding=utf-8
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/scm?useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.http.encoding.charset=UTF-8
+# Enable http encoding support.
+spring.http.encoding.enabled=true
+# Force the encoding to the configured charset on HTTP requests and responses.
+spring.http.encoding.force=true
 
+spring.datasource.username=root
+spring.datasource.password=barselon
+
+spring.jpa.show-sql = true
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+
+spring.jpa.hibernate.ddl-auto = create
+
+spring.datasource.max-active=100
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=10
+spring.datasource.validation-query=SELECT 1
+spring.datasource.test-on-borrow=true
+spring.datasource.test-on-return=false
+spring.datasource.test-while-idle=true
+spring.datasource.time-between-eviction-runs-millis=3600000
+spring.datasource.min-evictable-idle-time-millis=10800000
+spring.datasource.platform=mysql
+spring.datasource.continue-on-error=true
+
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database=MYSQL
+spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.show_sql=true
+
+server.session.timeout= 2600
+spring.jackson.serialization.indent_output=true
+#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+server.tomcat.basedir=${user.home}/deployer/tomcat
+
+#spring.thymeleaf.cache: false
+#spring.thymeleaf.mode: HTML5
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+
+# Logging
+#logging.level.org.springframework.web=info
+#logging.level.org.hibernate.=error
+
+logging.level.=error
+#logging.level.org.hibernate.SQL=debug
+# logging.level.org.springframework.web=ERROR
+# logging.level.org.springframework.context.annotation=TRACE
+
+# Active Spring profiles
+#spring.profiles.active=production
