All Controllers updated, SecurityConfig added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.datasource.max-active=100
 spring.datasource.max-idle=8
@@ -53,10 +53,12 @@ spring.http.multipart.max-request-size=10MB
 #logging.level.org.springframework.web=info
 #logging.level.org.hibernate.=error
 
-logging.level.=error
 #logging.level.org.hibernate.SQL=debug
 # logging.level.org.springframework.web=ERROR
 # logging.level.org.springframework.context.annotation=TRACE
 
 # Active Spring profiles
 #spring.profiles.active=production
+
+security.basic.enabled=false
+management.security.enabled=false
