--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
 spring.datasource.username=root
-spring.datasource.password=barselon
+spring.datasource.password=sigmapass
 
 spring.jpa.show-sql = true
 
@@ -29,7 +29,7 @@ spring.datasource.time-between-eviction-runs-millis=3600000
 spring.datasource.min-evictable-idle-time-millis=10800000
 spring.datasource.platform=mysql
 spring.datasource.continue-on-error=true
-
+    
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
