--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.messages.fallback-to-system-locale=false
 spring.messages.encoding=utf-8
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/scm?useUnicode=yes&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.http.encoding.charset=UTF-8
 # Enable http encoding support.
