--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
 spring.datasource.username=root
-spring.datasource.password=barselon
+spring.datasource.password=sigmapass
 
 spring.jpa.show-sql = true
 
